--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,13 @@ a {
 	align-items: center;
 }
 
+.disable-select {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
 /* Header */
 
 header {
@@ -139,7 +146,7 @@ nav {
 }
 
 .active-tab::after {
-	margin-top: 7px;
+	margin-top: 8px;
 	box-shadow: 0px 2px 4px var(--color-tab-shadow);
 }
 
