--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@
 
 body {
 	background-color: var(--bg-body);
+	overflow-x: hidden;
 }
 
 h1,
@@ -53,6 +54,7 @@ a {
 	justify-content: space-between;
 	height: 100vh;
 	/* align-items: center; */
+	/* transition: transform 250ms ease-out; */
 }
 
 .container {
@@ -185,6 +187,135 @@ main {
 	font-weight: var(--font-paragraph-weight);
 	font-size: 2em;
 }
+
+.slide-out--left {
+	animation-name: so-l;
+}
+
+.slide-out--right {
+	animation-name: so-r;
+}
+
+.slide-in--left {
+	animation-name: si-l;
+}
+
+.slide-in--right {
+	animation-name: si-r;
+}
+
+.slide-out--left,
+.slide-out--right,
+.slide-in--left,
+.slide-in--right {
+	animation-duration: 250ms;
+	animation-timing-function: ease-out;
+}
+
+.slide-out--left,
+.slide-out--right {
+	animation-fill-mode: forwards;
+}
+
+.slide-in--left,
+.slide-in--right {
+	animation-fill-mode: backwards;
+}
+
+@keyframes so-l {
+	from {
+		transform: translateX(0);
+		filter: blur(0);
+		opacity: 100%;
+	}
+
+	to {
+		transform: translateX(-200px);
+		filter: blur(5px);
+		opacity: 0%;
+	}
+}
+
+@keyframes so-r {
+	from {
+		transform: translateX(0);
+		filter: blur(0);
+		opacity: 100%;
+	}
+
+	to {
+		transform: translateX(200px);
+		filter: blur(5px);
+		opacity: 0%;
+	}
+}
+
+@keyframes si-l {
+	from {
+		transform: translateX(-200px);
+		filter: blur(5px);
+		opacity: 0%;
+	}
+
+	to {
+		transform: translateX(0);
+		filter: blur(0);
+		opacity: 100%;
+	}
+}
+
+@keyframes si-r {
+	from {
+		transform: translateX(200px);
+		filter: blur(5px);
+		opacity: 0%;
+	}
+
+	to {
+		transform: translateX(0);
+		filter: blur(0);
+		opacity: 100%;
+	}
+}
+
+/* .switch-content {
+	animation: contentSwitching;
+	animation-duration: 1000ms;
+	animation-timing-function: ease-out;
+	animation-fill-mode: backwards;
+}
+
+.switch-content.switch-left {
+	animation-direction: normal;
+}
+
+.switch-content.switch-right {
+	animation-direction: reverse;
+} */
+
+/* @keyframes slideOutLeft {
+	0% {
+		transform: translateX(0);
+		filter: blur(0);
+		opacity: 100%;
+	}
+
+	49% {
+		transform: translateX(-200px);
+		filter: blur(5px);
+		opacity: 0%;
+	}
+
+	50% {
+		transform: translateX(200px);
+	}
+
+	100% {
+		transform: translateX(0);
+		filter: blur(0);
+		opacity: 100%;
+	}
+} */
 
 /* Main: Home */
 
