--- a/src/style.css
+++ b/src/style.css
@@ -73,20 +73,15 @@ a {
 /* Header */
 
 header {
-	/* background-image: linear-gradient(to right, #085467, #afa7bb, #f4c0b3); */
-	/* background-clip: text; */
-	/* background-repeat: no-repeat; */
-	/* background-size: cover; */
 	padding: 10px;
 }
 
 header h1 {
-	/* font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; */
 	font-size: 6em;
-	/* margin-bottom: 5px; */
-	/* text-align: center; */
+	text-align: center;
 	text-transform: uppercase;
 	text-rendering: optimizeLegibility;
+	transition: font-size 150ms ease-out, line-height 150ms ease-out;
 }
 
 header p {
@@ -94,6 +89,7 @@ header p {
 	font-size: 2.6em;
 	font-family: var(--font-slogan);
 	color: var(--color-slogan);
+	transition: font-size 150ms ease-out;
 }
 
 /* Retroshadow by juanbrujo at codepen.io */
@@ -278,51 +274,13 @@ main {
 	}
 }
 
-/* .switch-content {
-	animation: contentSwitching;
-	animation-duration: 1000ms;
-	animation-timing-function: ease-out;
-	animation-fill-mode: backwards;
-}
-
-.switch-content.switch-left {
-	animation-direction: normal;
-}
-
-.switch-content.switch-right {
-	animation-direction: reverse;
-} */
-
-/* @keyframes slideOutLeft {
-	0% {
-		transform: translateX(0);
-		filter: blur(0);
-		opacity: 100%;
-	}
-
-	49% {
-		transform: translateX(-200px);
-		filter: blur(5px);
-		opacity: 0%;
-	}
-
-	50% {
-		transform: translateX(200px);
-	}
-
-	100% {
-		transform: translateX(0);
-		filter: blur(0);
-		opacity: 100%;
-	}
-} */
-
 /* Main: Home */
 
 /* Main: Menu */
 .menu {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
 	gap: 20px;
 }
 
@@ -399,4 +357,44 @@ footer {
 	font-family: var(--font-footer);
 	font-weight: var(--font-footer-weight);
 	font-size: 1.5em;
+}
+
+/* Responsive */
+@media screen and (max-width: 992px) {
+	header h1 {
+		font-size: 4.5em;
+	}
+
+	header p {
+		font-size: 2.2em;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	header h1 {
+		font-size: 3.5em;
+	}
+
+	header p {
+		font-size: 2em;
+	}
+
+	.card {
+		flex: 1 0 42%;
+	}
+}
+
+@media screen and (max-width: 576px) {
+	header h1 {
+		font-size: 3em;
+		line-height: 1.2em;
+	}
+
+	header p {
+		font-size: 1.6em;
+	}
+
+	.card {
+		flex: 1 0 100%;
+	}
 }
