adjusted some colors for better legibility

--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,9 @@
 	--bg-navbar: #fff1e6;
 	--bg-footer: #eddcd2;
 	--color-header: #403d39;
-	--color-slogan: #403d3983;
-	--color-link: #b7b7a4;
-	--color-link-active: #79796a;
+	--color-slogan: #403d39b4;
+	--color-link: #8b8b7e;
+	--color-link-active: #66665a;
 	--color-tab-shadow: #a5a58d;
 	--color-tab-shadow-none: #a5a58d00;
 	--color-card: #ddbea9;
