--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@
 	--font-paragraph-weight: 300;
 	--font-footer: "Yanone Kaffeesatz", sans-serif;
 	--font-footer-weight: 300;
+	--shadow-soft: 0px 0px 2px var(--color-dark);
 }
 
 /* General */
@@ -307,7 +308,8 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin: 0 160px;
+	gap: 20px;
+	margin: 10px 160px;
 	transition: margin 250ms ease-in-out;
 }
 
@@ -328,11 +330,96 @@ main {
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-position-y: 54%;
+	box-shadow: var(--shadow-soft);
 	transition: padding 250ms ease-in;
 }
 
-.home-wrapper p {
-	margin-top: 20px;
+.card-wrapper {
+	display: flex;
+	gap: 50px;
+	transition: height 260ms 1000ms ease-out;
+}
+
+.card-horizontal p {
+	align-self: center;
+	padding: 10px;
+}
+
+.card-horizontal {
+	display: flex;
+	justify-content: flex-start;
+	gap: 10px;
+	width: 100%;
+	height: 200px;
+	overflow: hidden;
+	margin: 30px 0;
+	background-color: var(--color-card);
+	color: var(--color-primary);
+	box-shadow: var(--shadow-soft);
+	border-radius: 5px;
+	padding: 0 10px 0 0;
+	transition: width 500ms ease-out, height 400ms ease-out, margin 400ms ease-out;
+}
+
+.card-horizontal.reversed {
+	padding: 0 0 0 10px;
+	flex-direction: row-reverse;
+}
+
+.card-horizontal img {
+	width: auto;
+	height: 100%;
+	border-radius: 5px;
+}
+
+.reviews {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 40px;
+	transition: gap 400ms ease-in-out;
+}
+
+.review {
+	flex: 0 0 22%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 20px;
+	font-size: smaller;
+	padding: 10px 20px;
+	border: 3px solid var(--color-card);
+	border-radius: 10px;
+	color: var(--color-dark);
+	background-color: var(--bg-navbar);
+	box-shadow: 0px 0px 5px var(--color-card);
+}
+
+.male,
+.female {
+	width: 120px;
+	height: 120px;
+	border-radius: 50%;
+	background-size: 240%;
+	background-repeat: no-repeat;
+	filter: drop-shadow(0px 0px 2px var(--color-dark));
+}
+
+.review .male {
+	background-position: -16px;
+}
+
+.review .female {
+	background-position: -151px -12px;
+}
+
+.review .fa-star {
+	color: var(--color-card) !important;
+}
+
+.review p {
+	font-size: 26px;
+	text-align: center;
 }
 
 /* Main: Menu */
@@ -487,6 +574,41 @@ footer p {
 }
 
 /* Responsive */
+@media screen and (max-width: 1480px) {
+	.card-wrapper {
+		flex-direction: column;
+		gap: 0px;
+	}
+
+	.card-horizontal {
+		width: 70%;
+	}
+
+	.card-horizontal.reversed {
+		align-self: flex-end;
+	}
+
+	.reviews {
+		gap: 10px;
+	}
+}
+
+@media screen and (max-width: 1300px) {
+	.reviews {
+		gap: 20px;
+	}
+
+	.review {
+		flex-basis: 40%;
+	}
+}
+
+@media screen and (max-width: 1130px) {
+	.card-horizontal {
+		width: 100%;
+	}
+}
+
 @media screen and (max-width: 992px) {
 	/* Header */
 	header h1 {
@@ -510,9 +632,20 @@ footer p {
 		padding: 20px 0;
 	}
 
+	.review {
+		flex-basis: 48%;
+	}
+
 	/* Contact */
 	form {
 		width: 80%;
+	}
+}
+
+@media screen and (max-width: 830px) {
+	.card-horizontal {
+		height: 0;
+		margin: 0;
 	}
 }
 
@@ -558,6 +691,12 @@ footer p {
 	input {
 		margin-bottom: 20px;
 		font-size: 0.9em;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	.review {
+		flex-basis: 100%;
 	}
 }
 
